# psychic-funicular

./: .gitignore  .pre-commit-config.yaml  README.md  lint.sh  pyproject.toml  requirements.txt  run_tests.bat  run_tests.sh
.github/workflows/: robot-tests.yml
args/: chrome.args  firefox.args
docs/: ASSUMPTIONS.md  DESIGN.md
resources/: environment.resource  saucedemo.resource  test_constants.resource
resources/libraries/: ChromeDevToolsLauncher.py
resources/pages/: cart_page.resource  checkout_page.resource  inventory_page.resource  login_page.resource
tests/: dynamic_shopping.robot  invalid_login.robot  valid_login.robot
